Fixed safari<7.0 view not showing problem

--- a/client/app/view/view.css
+++ b/client/app/view/view.css
@@ -40,6 +40,7 @@
     top: 25px;
     left: 40px;
     width: calc(100% - 40px);
+    height: 100vh; /* for safari <7.0  */
     height: calc(100vh - 25px);
 }
 /*.KFViewMainCanvasWithoutMenu {
